--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,9 +27,10 @@ a {
 }
 
 .navbar-container{
+  max-width: 1400px;
   display: flex;
   justify-content: space-between;
-  margin: 6px 18px;
+  margin: 6px auto;
   position: relative;
 }
 .marquee-text{
