--- a/styles/globals.css
+++ b/styles/globals.css
@@ -474,7 +474,7 @@ span.text-red {
   font-weight: 700 ;
   font-size: 26px;
   margin-top: 30px;
-  color:#f02d34;
+  color: #324d67;
 }
 .price .old-price, .product-price .old-price, .price .old-price{
   color: gray;
